.k8s/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: app
          image: spyric/arch-po-otus:v0.2
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            periodSeconds: 5
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            successThreshold: 2
            periodSeconds: 1
