.k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      name: app
      port: 8000
